--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - restore_cache: # ** restores saved dependency cache if the Branch key template or requirements.txt files have not changed since the previous run **
           key: &deps1-cache deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
 
-      - run: # Activate virtual environment with pip and install dependencies
+      - run: # activate virtual environment with pip and install dependencies
           name: Install dependencies
           command: |
             python3 -m venv venv
